# mulle-core-all-load

./: AGENTS.md  CMakeLists.txt  LICENSE  README.md  RELEASENOTES.md  dlfcn-win32  mulle-core-all-load.sublime-project  mulle-core-startup.sublime-project  mulle-generate-all-load-constructor
.github/workflows/: cmake-errors.yml  mulle-linux-package.yml  test-submodule.bat  test-submodule.sh
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-project.sh
.mulle/etc/sourcetree/: config
cmake/: Headers.cmake  Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/share/: StandaloneC.cmake
cola/: description.md.bud  properties.plist
src/: mulle-core-all-load.c  mulle-core-all-load.h  mulle-core-startup.c  mulle-core-startup.h
src/generic/: include-private.h  include.h
src/mulle-atexit/: include.h  mulle-atexit.c  mulle-atexit.h
src/mulle-atinit/: _mulle-atinit-include-private.h  _mulle-atinit-include.h  include-private.h  include.h  mulle-atinit.c  mulle-atinit.h
src/mulle-dlfcn/: _mulle-dlfcn-versioncheck.h  mulle-dlfcn.h
src/reflect/: _mulle-core-all-load-include-private.h  _mulle-core-all-load-include.h  _mulle-core-startup-include-private.h  _mulle-core-startup-include.h
test/: AGENTS.md  README.md  include.h
test/10-first/: 01_basic.c  01_basic.stdout  atinitexit.c  atinitexit.stdout  dlsym.c  dlsym.stdout  stacktrace.c
test/20-cmake-subdir/: CMakeLists.txt  default.stdout  test_consumer.c  test_consumer.stdout
test/30-git-submodule/: default.stdout  run-test
(+5 files in other folders)
